tests-integration/fixtures/checking/1778856960_instance_member_signature_weakening/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
lift ::
  forall (@t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type).
    Transform (t :: (Type -> Type) -> Type -> Type) =>
    Functor (f :: Type -> Type) =>
    (f :: Type -> Type) (a :: Type) ->
    (t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type)
Wrap ::
  forall (@f :: Type -> Type) (@a :: Type).
    (f :: Type -> Type) (a :: Type) -> Wrap (f :: Type -> Type) (a :: Type)
render :: forall (@a :: Type). Render (a :: Type) => (a :: Type) -> String
renderer ::
  forall (@t :: Type) (a :: Type).
    Renderer (t :: Type) => Render (a :: Type) => (a :: Type) -> (t :: Type)
liftPlain ::
  forall (@t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type).
    TransformPlain (t :: (Type -> Type) -> Type -> Type) =>
    (f :: Type -> Type) (a :: Type) ->
    (t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type)

Types
Transform :: ((Type -> Type) -> Type -> Type) -> Constraint
Wrap :: (Type -> Type) -> Type -> Type
Render :: Type -> Constraint
Renderer :: Type -> Constraint
TransformPlain :: ((Type -> Type) -> Type -> Type) -> Constraint

Classes
class forall (t :: (Type -> Type) -> Type -> Type). Transform (t :: (Type -> Type) -> Type -> Type)
  lift ::
  forall (@t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type).
    Transform (t :: (Type -> Type) -> Type -> Type) =>
    Functor (f :: Type -> Type) =>
    (f :: Type -> Type) (a :: Type) ->
    (t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type)
class forall (a :: Type). Render (a :: Type)
  render :: forall (@a :: Type). Render (a :: Type) => (a :: Type) -> String
class forall (t :: Type). Renderer (t :: Type)
  renderer ::
  forall (@t :: Type) (a :: Type).
    Renderer (t :: Type) => Render (a :: Type) => (a :: Type) -> (t :: Type)
class forall (t :: (Type -> Type) -> Type -> Type). TransformPlain (t :: (Type -> Type) -> Type -> Type)
  liftPlain ::
  forall (@t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type).
    TransformPlain (t :: (Type -> Type) -> Type -> Type) =>
    (f :: Type -> Type) (a :: Type) ->
    (t :: (Type -> Type) -> Type -> Type) (f :: Type -> Type) (a :: Type)

Instances
instance Transform Wrap
instance Renderer String
instance TransformPlain Wrap

Roles
Wrap = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Functor (f :: Type -> Type)
  --> 30:1..32:19
   |
30 | instance TransformPlain Wrap where
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
